# romhop

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: package.yml
backlog/: config.yml
backlog/tasks/: task-001 - Fix-frozen-Linux-AppImage-downloads-broken.md  task-002 - Frozen-install-does-not-expose-romhop-CLI-on-PATH.md  task-003 - Windows-uninstaller-leaves-config-and-ROM-data-behind.md  task-004 - Windows-installer-shows-git-branch-name-instead-of-clean-name-semver.md  task-005 - Frozen-Windows-download-progress-bar-does-not-render.md  task-006 - Windows-setup-wizard-theme-mismatch-light-header-footer-on-dark-body.md  task-007 - Tray-close-hint-ignores-sync-off-state.md  task-008 - Add-Pull-button-to-GUI.md  task-009 - Detect-already-local-games-on-download.md  task-010 - Auto-update-for-frozen-installers-tufup.md  task-010.08 - update.py-GitHub-Releases-client-core.md  task-010.09 - Apply-mechanism-silent-installer-re-run.md  task-010.10 - GUI-update-flow-worker-banner-restart-settings-toggles.md  task-010.11 - CI-mark-prereleases-from-tag-build-provenance-attestation.md  task-010.12 - Docs-GitHub-Releases-update-release-runbook.md  task-011 - Port-GUI-backend-core-additions-to-main-without-GUI.md  task-012 - Manual-desktop-smoke-test-of-merged-but-unverified-GUI-features.md  task-013 - GUI-sync-download-user-feedback.md  task-013.01 - Bottom-right-transient-toast-on-successful-sync-push.md  task-013.02 - Optional-OS-desktop-notifications.md  task-013.03 - Viewable-sync-download-log-panel.md  task-013.04 - Activity-event-model-hub-foundation.md  task-014 - Upload-unmatched-local-games-to-RomM.md  (+51 more)
packaging/: entry.py  entry_gui.py  romhop.spec
tests/: conftest.py  test_app_dispatch.py  test_autostart.py  test_cli.py  test_cli_upload.py  test_config.py  test_download.py  test_frozen_dispatch.py  test_gui_activity_log.py  test_gui_app.py  test_gui_cli.py  test_gui_covers.py  test_gui_desktop_notif.py  test_gui_detail_panel.py  test_gui_filter_bar.py  test_gui_scan_dialog.py  test_gui_settings_view.py  test_gui_setup_wizard.py  test_gui_single_instance.py  test_gui_theme.py  test_gui_toast.py  test_gui_tray.py  test_gui_update_flow.py  test_gui_upload_dialog.py  test_gui_views.py  test_gui_workers.py  test_install_bootstrap.py  test_launcher_install.py  test_library.py  test_local_index.py  test_logging_setup.py  test_mapping_cache.py  test_platform_map.py  test_platform_names.py  test_platform_resolve.py  test_pull.py  test_retroarch_cfg.py  test_romm_client.py  test_scan.py  test_sync.py  (+3 more)
(+64 files in other folders)
