[project]
name = "emusync"
version = "0.1.0"
description = "Sync a self-hosted RomM library with a local ES-DE/RetroArch setup"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "watchfiles>=0.21",
    "platformdirs>=4.0",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
emusync = "emusync.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emusync"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
