[project]
name = "romhop"
dynamic = ["version"]
description = "Sync a self-hosted RomM library with a local ES-DE/RetroArch setup"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "watchfiles>=0.21",
    "platformdirs>=4.0",
    "keyring>=24.0",
    "python-socketio[client]>=5.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.4", "PySide6>=6.6"]
gui = ["PySide6>=6.6"]

[project.scripts]
romhop = "romhop.cli:app"

# GUI launcher: gui-scripts builds a no-console executable on Windows
# (pythonw) and a plain script on Linux. Used by the desktop shortcut.
[project.gui-scripts]
romhop-gui = "romhop.gui.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/romhop/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/romhop"]

#[tool.hatch.build.targets.wheel.force-include]
#"src/romhop/gui/themes" = "romhop/gui/themes"
#"src/romhop/gui/assets" = "romhop/gui/assets"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
